<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context=".Screen3">

    <TextView
        android:id="@+id/textView"
        android:layout_width="173dp"
        android:layout_height="44dp"
        android:layout_marginBottom="136dp"
        android:text="@string/training_text"
        android:textAlignment="center"
        android:textColor="#B2FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_number"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/btn_numbers_text"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_phrases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_phrases"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/btn_phrases_text"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>